--- a/dint/tema3/practica/index.html
+++ b/dint/tema3/practica/index.html
@@ -3,25 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/header.css" rel="stylesheet" type="text/css">
-    <link href="css/footer.css" rel="stylesheet" type="text/css">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="../../../css/header.css" rel="stylesheet" type="text/css">
+    <link href="../../../css/footer.css" rel="stylesheet" type="text/css">
+    <link href="../../../css/style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <title>Práctica_DINT_Palacios_Carlos</title>
 </head>
 
 <body>
     <header>
         <div class="container">
-            <a href="" class="logo">Inicio</a>
+            <a href="../../../index.html" class="logo">Inicio</a>
             <nav>
                 <div class="dropdown">
-                    <a href="dint/index.html" class="dropbtn">DINT</a>
+                    <a href="../../index.html" class="dropbtn">DINT</a>
                     <div class="dropdown-content">
-                        <a href="dint/tema1/index.html">Tema 1 - Planificación de Interfaces</a>
-                        <a href="dint/tema2/index.html">Tema 2 - Uso de Estilos</a>
-                        <a href="dint/tema3/index.html">Tema 3 - Contenido Multimedia</a>
-                        <a href="dint/tema4/index.html">Tema 4 - Accesibilidad</a>
-                        <a href="dint/tema6/index.html">Tema 6 - Usabilidad</a>
+                        <a href="../../tema1/index.html">Tema 1 - Planificación de Interfaces</a>
+                        <a href="../../tema2/index.html">Tema 2 - Uso de Estilos</a>
+                        <a href="../../tema3/index.html">Tema 3 - Contenido Multimedia</a>
+                        <a href="../../tema4/index.html">Tema 4 - Accesibilidad</a>
+                        <a href="../../tema6/index.html">Tema 6 - Usabilidad</a>
                     </div>
                 </div>
                 <div class="dropdown disabled">
@@ -53,15 +55,18 @@
     </header>
     <main>
         <div class="container">
-            <h1>Página Principal</h1>
-            <p><a href="old/index.html">Ir a la Página Antigua</a></p>
+            <h1>Tema 3 - Prácticas</h1>
+            <section>
+                <a href="" target="_blank">
+                    <h3>Ejemplo</h3>
+                    <i class="fa fa-external-link"></i>
+                </a>
+            </section>
         </div>
     </main>
     <footer>
         <div class="container">
-            <div>2º DAW - Carlos Palacios Alonso</div>
+            <div>2º DAW - Carlos Palacios Alonso &nbsp;-&nbsp; Diseño de Interfaces Web</div>
         </div>
     </footer>
 </body>
-
-</html>
